--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                   <p class="card-title">Introduction to a Machine Learning Online Course</p>
                   <p class="auth-wrapper"><span class="card-author">Edyoda </span>| <span class="card-date">23 Aug 2019</span></p>
                   <p class="card-desc">
+                    Aman khare
                     We have had an insight into Artificial Intelligence. Well, one of its subfields is machine learning and this introduction will help...
                   </p>
                 </div>
